src/test/deca/codegen/invalid/subclass_in_class.ass
; start main program
	TSTO #9
	BOV pile_pleine
	ADDSP #6

; Generation table des methodes
; Table methodes Object
	LOAD #null, R2
	STORE R2, 1(GB)
	LOAD code.Object.equals, R2
	STORE R2, 2(GB)
; Table methodes A
	LEA 1(GB), R2
	STORE R2, 3(GB)
	LOAD code.Object.equals, R2
	STORE R2, 4(GB)

; Main program
; Variables declarations:
	NEW #2, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 5(GB)
	LOAD 5(GB), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 1(R2), R2
	STORE R2, 6(GB)
; Beginning of main instructions:
	HALT

; Methodes de classe
code.Object.equals:
	TSTO #2
	BOV pile_pleine
	PUSH R2
	PUSH R3
	LOAD -2(LB), R2
	LOAD -3(LB), R3
	CMP R2, R3
	SEQ R0
	POP R3
	POP R2
	RTS
; Corps des methodes de la classe A
init.A:
	TSTO #6
	BOV pile_pleine
	ADDSP #3
	PUSH R2
	PUSH R3
	LOAD -2(LB), R2
	LOAD #null, R3
	STORE R3, 1(R2)
	NEW #2, R3
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R3)
	PUSH R3
	BSR init.A
	POP R3
	STORE R3, 1(R2)
	POP R3
	POP R2
	RTS
; end main program
; Gestion des erreurs d'executions
pile_pleine:
	WSTR "Débordement de pile"
	WNL
	ERROR
tas_plein:
	WSTR "Débordement du tas"
	WNL
	ERROR
division_par_0:
	WSTR "Division par 0"
	WNL
	ERROR
debordement_arithmetique:
	WSTR "Débordement arithmetique"
	WNL
	ERROR
dereferencement_null:
	WSTR "Déréférencement de ""null"""
	WNL
	ERROR
cast_impossible:
	WSTR "Cast impossible"
	WNL
	ERROR
erreur_de_lecture:
	WSTR "Erreur de lecture"
	WNL
	ERROR
